--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import PortfolioPreview from '../components/PortfolioPreview.astro';
 
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro';
-import Skills from '../components/Skills.astro';
+import InternationalExperience from '../components/InternationalExperience.astro';
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection('work'))
@@ -49,11 +49,11 @@ const projects = (await getCollection('work'))
 					src="/assets/portrait.jpg"
 				/>
 			</header>
-
-			<Skills />
 		</div>
 
 		<main class="wrapper stack gap-20 lg:gap-48">
+			<InternationalExperience />
+
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Featured Projects</h3>
@@ -78,24 +78,6 @@ const projects = (await getCollection('work'))
 				</div>
 			</section>
 
-			<section class="section with-background bg-variant">
-				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Achievements</h3>
-					<p>Recognition received in international competitions and technical challenges.</p>
-				</header>
-
-				<div class="gallery">
-					<Grid variant="small">
-						{
-							['RoboCup 2023: Best in Mapping', 'RoboCup 2022: Best in Sensing', 'AWS DeepRacer Top 0.25%', 'Stanford Summer Session', 'Olin Exchange Program'].map((achievement) => (
-								<li class="mention-card">
-									<p>{achievement}</p>
-								</li>
-							))
-						}
-					</Grid>
-				</div>
-			</section>
 		</main>
 
 		<ContactCTA />
