--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 <aside>
 	<h2>Let's build something together</h2>
 	<CallToAction href="mailto:me@enriccogemha.dev">
-		Send Me a Message
+		Send Me an Email
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
 </aside>
