--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,12 @@ const projects = (await getCollection('work'))
 						<Pill>Full-Stack</Pill>
 						<Pill>Mobile</Pill>
 					</div>
+					
+					<div class="badges">
+						<a href="https://www.credly.com/badges/93f53b4d-ed60-47e9-abdd-bc266ec1bf42/public_url" target="_blank">
+							<img data-tilt src="https://images.credly.com/size/340x340/images/00634f82-b07f-4bbd-a6bb-53de397fc3a6/image.png" alt="AWS Certified Cloud Practitioner" width="150"/>
+						</a>
+					</div>
 				</Hero>
 
 				<img
@@ -96,6 +102,10 @@ const projects = (await getCollection('work'))
 		display: none;
 	}
 
+	.badges {
+		display: none;
+	}
+
 	.hero img {
 		aspect-ratio: 5 / 4;
 		object-fit: cover;
@@ -116,6 +126,23 @@ const projects = (await getCollection('work'))
 			margin-top: 0.5rem;
 			display: flex;
 			gap: 0.5rem;
+		}
+
+		.badges {
+			margin-top: 1rem;
+			display: flex;
+			justify-content: center;
+		}
+
+		.badges img {
+			transition: transform 0.2s ease;
+			width: 150px;
+			height: 150px;
+			object-fit: contain;
+		}
+
+		.badges img:hover {
+			transform: scale(1.05);
 		}
 
 		.hero img {
@@ -214,3 +241,20 @@ const projects = (await getCollection('work'))
         }
     }
 </style>
+
+<script>
+	import VanillaTilt from 'vanilla-tilt';
+	
+	document.addEventListener('DOMContentLoaded', () => {
+		const tiltElement = document.querySelector('[data-tilt]');
+		if (tiltElement) {
+			VanillaTilt.init(tiltElement, {
+				max: 35,
+				speed: 400,
+				glare: true,
+				"max-glare": 0.3,
+				scale: 1.1
+			});
+		}
+	});
+</script>
